<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:orientation="vertical"
    android:padding="50dp">

    <ImageView
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/notalogo"/>

    <EditText
        android:layout_marginTop="30dp"
        android:id="@+id/inputUserLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/app_inputUser"
        android:inputType="text"/>

    <EditText
        android:id="@+id/inputPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/app_inputPass"/>

    <Button
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:text="@string/app_buttonLogin"
        android:onClick="callLogin"/>

    <Button
        android:onClick="callDoRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:text="@string/app_buttonRegister"/>

</LinearLayout>