<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NotesRegisterActivity"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/inputTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/app_NoteTitle"
        android:inputType="text"/>

    <EditText
        android:id="@+id/inputDescription"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:inputType="text"
        android:hint="@string/app_description"/>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:text="@string/app_buttonRegister"
        android:onClick="callRegisterNote"/>

</LinearLayout>