<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:focusable="true"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">


        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/title_text"/>

        <TextView
            android:id="@+id/description_text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/title_text"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:text="@string/description_text"/>

        <LinearLayout
            android:layout_below="@+id/description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/doArchived_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/archivar"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"/>

            <Button
                android:id="@+id/doFavorite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorito"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored" />

        </LinearLayout>


    </RelativeLayout>

</android.support.v7.widget.CardView>